fix: fix header background bleeding into content

--- a/resources/skins.citizen.styles/Header.less
+++ b/resources/skins.citizen.styles/Header.less
@@ -33,7 +33,7 @@
 		position: absolute;
 		right: 0;
 		left: 0;
-		height: ~'calc( var( --height-header ) * 1.5 )';
+		height: ~'calc( var( --height-header ) + 20px )';
 		/*
 		 * ease(x) := 1 - pow(1 - x, 2);
 		 */
